# AI-wallet-backend

./: .env.example  .env.production  BETA_LAUNCH_CHECKLIST.md  DEPLOYMENT.md  Dockerfile  README.md  TESTING.md  compose.yaml  demo_test.py  deploy.sh  docker-compose.yml  frontend_implementation.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_app.sh  run_server.py  test_runner.py  vercel-backend.json  vercel-frontend.json  vercel.json
agents/: __init__.py  base.py  crypto_advisor.py  firecrawl_research.py  market_research.py  portfolio_management.py  selector.py
agno_ui/crypto-research-ui/: next.config.ts
agno_ui/crypto-research-ui/src/: store.ts
api/: index.py  models.py  routes.py
app/: main.py
app/api/: auth.py  crypto_data.py  health.py  portfolio.py  solana.py  users.py
app/db/: database.py
app/mcp/: __init__.py
app/mcp/ccxt/: client.py  run.py
app/mcp/defillama/: client.py  (+1 more)
app/models/: auth.py  portfolio.py  user.py
app/services/: crypto_price.py  firecrawl_service.py  portfolio.py  unified_crypto_api.py
app/utils/: auth_deps.py  solana_utils.py  wallet_auth.py
config/: models.py
db/: session.py
docs/: AGNO_UI_INTEGRATION.md  API_INTEGRATION.md  flutter_integration.md
examples/: agent_usage.py  api_usage.py
readme/: project_goal_roadmap.md
scripts/: deploy.sh  migrate.py  setup.sh
tests/: README.md  conftest.py  test_agent_service.py  test_agents.py  test_agents_api.py  test_api.py  test_crypto_advisor_enhanced.py  test_crypto_data_api.py  test_firecrawl_research.py  test_models.py  test_unified_crypto_api.py
(+23 files in other folders)
