[project]
name = "salt-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "firebase-admin>=6.8.0",
    "openai>=1.78.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "web3>=7.11.0",
    "requests>=2.0.0",
    "ccxt>=4.0.0",
    "mcp>=0.1.0",
    "uvx>=0.1.0",
    "uv>=0.1.0",
]
